--- a/hangman/.editorconfig
+++ b/hangman/.editorconfig
@@ -7,7 +7,7 @@ charset = utf-8
 indent_size = 4
 indent_style = space
 trim_trailing_whitespace = true
-max_line_length = 80
+# max_line_length = 80
 
 [Makefile]
 indent_style = tab
